# CreatYourVoice

./: .gitignore  .gitmodules  COMPONENT_DESIGN_STANDARDS.md  CORRECT_UI_ARCHITECTURE_DESIGN.md  INSTALLATION.md  LICENSE  README.md  README_DDSP_SVC_VERSION_SUPPORT.md  README_GPU_MODEL_MANAGEMENT.md  README_VOICE_BASE_CREATION.md  README_VOICE_INHERITANCE_FUSION.md  README_VOICE_SYNTHESIS.md  RESPONSIVE_LAYOUT_IMPLEMENTATION.md  SIMPLIFIED_FUSION_DESIGN.md  TESTING_SUMMARY.md  UI_REDESIGN_SPECIFICATION.md  UI_REDESIGN_SUMMARY.md  USER_EXPERIENCE_TESTING_PLAN.md  VOICE_CREATION_WORKFLOW_REDESIGN.md  architecture_design.md  config.yaml  main.py  pyproject.toml
examples/: ddsp_svc_version_demo.py  emotion_audio_demo.py  inheritance_fusion_demo.py  synthesis_demo.py
src/: __init__.py
src/core/: __init__.py  advanced_weight_calc.py  emotion_manager.py  gpu_manager_init.py  gpu_model_manager.py  model_lifecycle.py  models.py  synthesis_history.py  voice_base_creator.py  voice_fusion.py  voice_inheritance.py  voice_manager.py  voice_preset_manager.py  voice_synthesizer.py  weight_calculator.py
src/data/: emotion_presets.yaml
src/integrations/: __init__.py  ddsp_svc.py  ddsp_svc_unified.py  ddsp_svc_v61.py  ddsp_svc_v63.py  index_tts.py  version_manager.py
src/utils/: __init__.py  audio_utils.py  config.py  error_handler.py  gpu_utils.py  logging_config.py  memory_monitor.py  version_detector.py
src/webui/: __init__.py  app.py  fusion_tab.py  inheritance_tab.py  model_management_tab.py  synthesis_tab.py  version_selection.py  voice_creation_tab.py  voice_management_tab.py
tests/: README.md  run_all_tests.py  test_core.py  test_ddsp_svc_versions.py  test_gpu_management.py  test_inheritance_fusion.py  test_synthesis_integration.py  test_voice_base_creator.py
tests/deployment/: test_configuration.py  test_installation.py
tests/integration/: test_end_to_end.py  test_voice_creation.py  test_voice_fusion.py  test_voice_synthesis.py
(+6 files in other folders)
